WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90154
[Qt] Fix TextureMapper rendering of GraphicsSurface on Mac
https://bugs.webkit.org/show_bug.cgi?id=90154
Summary
[Qt] Fix TextureMapper rendering of GraphicsSurface on Mac
Jocelyn Turcotte
Reported
2012-06-28 03:37:36 PDT
[Qt] Fix TextureMapper rendering of GraphicsSurface on Mac
Attachments
Patch
(5.18 KB, patch)
2012-06-28 05:08 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2012-06-28 05:08:54 PDT
Created
attachment 149928
[details]
Patch
WebKit Review Bot
Comment 2
2012-06-28 13:34:15 PDT
Comment on
attachment 149928
[details]
Patch Clearing flags on attachment: 149928 Committed
r121462
: <
http://trac.webkit.org/changeset/121462
>
WebKit Review Bot
Comment 3
2012-06-28 13:34:23 PDT
All reviewed patches have been landed. Closing bug.
Martin Robinson
Comment 4
2012-06-28 13:40:37 PDT
(In reply to
comment #3
)
> All reviewed patches have been landed. Closing bug.
Sorry for the bustage and thanks for fixing this.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug